# grouped-nf4-gemm

./: AGENT-PLAN-mxfp4.md  ATTRIBUTION.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECTIONS-multiarch.md  PROJECTIONS-multiarch.md.ots  PROJECTIONS-multiarch.md.pre-addendum2.ots  PROTOCOL-multiarch.md  PROTOCOL-multiarch.md.ots  PROTOCOL-multiarch.md.pre-amendment1.ots  README.md  REPRO.md  RESULTS-multiarch-mi300x-followup.md  RESULTS-multiarch-mi300x-followup.md.ots  RESULTS-multiarch-mi300x.md  RESULTS-multiarch-mi300x.md.ots  SHA256SUMS.mi300x  gemm_predictions.json  pyproject.toml
aliases/grouped-mxfp4-gemm/: README.md  pyproject.toml
backends/: __init__.py  config.py  detect.py
bench/: hw_contract.py
census/: make_census.py  shape_census.json
docs/: COMPETITIVE.md  KERNEL_CONTRACT.md  PORTABILITY.md  RESULTS-ikllama-ab.md  RESULTS-ikllama-ab.md.ots  TOLERANCE_CONTRACT.md  WATCHLIST.md  context-budgets.md
kernel/: ERRATA.md  GATE2-ASSESSMENT.md  RESULTS-gate2-confirmatory.md  RESULTS-gate2-confirmatory.md.ots  RESULTS-phase2-gate2.md  RESULTS-phase2-v1.1-negative.md  RESULTS-phase2-v1.md  RESULTS-v2-confirmatory.md  RESULTS-v2-confirmatory.md.ots  RESULTS-v3-confirmatory.md  RESULTS-v3-confirmatory.md.ots  RESULTS-v4-confirmatory.md  RESULTS-v4-confirmatory.md.ots  RESULTS-v5-confirmatory.md  RESULTS-v5-confirmatory.md.ots  RESULTS-v6-a2000-report.md  RESULTS-v6-confirmatory.md  RESULTS-v6-confirmatory.md.ots  decode_sweep_winners.json  gate_native_load_20b.py  host_gather.py  moonshot_gather.py  mxfp4_grouped.py  mxfp4_loader.py  mxfp4_native_load.py  mxfp4_pack_ref.py  mxfp4_pipelined.py  mxfp4_qlora.py  nf4_grouped.py  nf4_pack_ref.py  prereg_flagship_bnb_baseline.json  prereg_flagship_bnb_baseline.json.ots  (+41 more)
(+444 files in other folders)
