[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grouped-nf4-gemm"
version = "0.2.2"
description = "Fused grouped GEMM on bitsandbytes NF4-packed weights with host streaming, on consumer GPUs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Jordan Anderson" }]
dependencies = [
    "torch>=2.8",
    "triton>=3.4",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://cerinamroth.com/ml/grouped-nf4-gemm/"
Source = "https://github.com/pjordanandrsn/grouped-nf4-gemm"
Receipts = "https://github.com/pjordanandrsn/grouped-nf4-gemm/tree/main/kernel"

[tool.setuptools]
package-dir = { "" = "kernel" }
py-modules = [
    "nf4_grouped", "nf4_pack_ref", "host_gather",
    "mxfp4_pack_ref", "mxfp4_grouped", "mxfp4_loader", "mxfp4_pipelined",
    "mxfp4_qlora", "mxfp4_native_load", "moonshot_gather", "verify_provenance",
    "run_mxfp4_20b_qlora", "gate_native_load_20b",
]
