[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grouped-mxfp4-gemm"
version = "0.1.0"
description = "Alias of grouped-nf4-gemm — the MXFP4 native-byte lane ships there (pip install grouped-nf4-gemm)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jordan Anderson", email = "paul.jordan.anderson@gmail.com" }]
dependencies = ["grouped-nf4-gemm>=0.2.0"]

[tool.setuptools]
py-modules = []
